[project]
name = "expense-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "email-validator>=2.3.0",
    "flask>=3.1.3",
    "flask-jwt-extended>=4.7.4",
    "flask-restful>=0.3.10",
    "gunicorn>=26.0.0",
    "mongoengine>=0.29.3",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-flask>=1.3.0",
]
